@@ -20,6 +20,8 @@ S3method(kwic,character)
 S3method(kwic,corpus)
 S3method(ndoc,corpus)
 S3method(ndoc,dfm)
+S3method(nfeature,corpus)
+S3method(nfeature,dfm)
 S3method(nresample,corpus)
 S3method(nresample,dfm)
 S3method(plot,dfm)
@@ -80,6 +82,7 @@ export(language)
 export(metacorpus)
 export(metadoc)
 export(ndoc)
+export(nfeature)
 export(ngrams)
 export(nresample)
 export(readLIWCdict)
