@@ -3,7 +3,8 @@
 \alias{trimdfm}
 \title{Trim a dfm based on a subset of features and words}
 \usage{
-trimdfm(x, minCount = 5, minDoc = 5, sample = NULL, verbose = TRUE)
+trimdfm(x, minCount = 1, minDoc = 1, sample = NULL, keep = NULL,
+  verbose = TRUE)
 }
 \arguments{
 \item{x}{document-feature matrix created by \link{dfm}}
@@ -14,6 +15,8 @@ trimdfm(x, minCount = 5, minDoc = 5, sample = NULL, verbose = TRUE)
 
 \item{sample}{how many features to retain (based on random selection)}
 
+\item{keep}{regular expression specifying which features to keep}
+
 \item{verbose}{print messages}
 }
 \value{
@@ -23,15 +26,16 @@ A \link{dfm} object reduced in size.
 Returns a document by feature matrix reduced in size based on document and term frequency, and/or subsampling.
 }
 \examples{
-data(inaugCorpus)
 dtm <- dfm(inaugCorpus)
 dim(dtm)
 dtmReduced <- trimdfm(dtm, minCount=10, minDoc=2) # only words occuring at least 5 times and in at least 2documents
 dim(dtmReduced)
+dtmReduced <- trimdfm(dtm, keep="^nation|^citizen|^union$")
+topfeatures(dtmReduced, NULL)
 dtmSampled <- trimdfm(dtm, sample=200)  # top 200 words
 dim(dtmSampled)  # 196 x 200 words
 }
 \author{
-Ken Benoit adapted from code by Will Lowe (see \link[austin]{trim})
+Ken Benoit adapted from code originally by Will Lowe (see \link[austin]{trim})
 }
 
